# DataEng_MySQL_Project

./: .gitignore  README.md  analyzing_students_hrv.ipynb  pyproject.toml
src/: creat_schema.py  create_schema.py  event_series.py  ibi.py  main.py  sql_database.py  student.py
tests/: test_event_series.py  test_main.py  test_student.py
